增加了期望值中的sql处理 增加了访客邀请的到访户号接口用例

--- a/Conf/config.ini
+++ b/Conf/config.ini
@@ -2,10 +2,10 @@
 
 [private_debug]
 # debug测试服务
-tester = 19981203720
+tester = 15828022852
 environment = debug
 versionCode = test_0.1
-host = https://trest.yishengyue.cn
+ysy_host = https://trest.yishengyue.cn
 loginHost = /api/v1/verifycode/getVerifyCode?mobile=18180734223
 loginInfo = {}
 sql_dbhost = 116.62.63.151
@@ -16,17 +16,17 @@ sql_pwd = aaaaa888
 
 [online_release]
 # release正式服务
-tester = 15828022852
-environment = release
-versionCode = release_0.1
-host = api.yishengyue.cn
-loginHost = /api/v1/verifycode/getVerifyCode?mobile=15828022852
-loginInfo = {}
-sql_dbhost = rm-bp155162txb9055txo.mysql.rds.aliyuncs.com
-sql_dbport = 3336
-sql_dbname = yishengyue_platform_db
-sql_user = ysy_check
-sql_pwd = rammstein5!
+releaser = 15828022852
+release_environment = release
+release_versionCode = release_0.1
+release_host = api.yishengyue.cn
+release_loginHost = /api/v1/verifycode/getVerifyCode?mobile=15828022852
+release_loginInfo = {}
+release_sql_dbhost = rm-bp155162txb9055txo.mysql.rds.aliyuncs.com
+release_sql_dbport = 3336
+release_sql_dbname = yishengyue_platform_db
+release_sql_user = ysy_check
+release_sql_pwd = rammstein5!
 
 [mail]
 #发送邮件信息
