增加了雨花斋的测试环境 优化了re_load方法

--- a/Conf/config.ini
+++ b/Conf/config.ini
@@ -13,6 +13,8 @@ sql_dbport = 3316
 sql_dbname = yishengyue_platform_db
 sql_user = ysy
 sql_pwd = aaaaa888
+yhz_host = https://tyhz.yishengyue.cn
+yhz_dbname = t_yhz_db
 
 [online_release]
 # release正式服务
