优化了用例执行方式，增加了5接口个用例

--- a/Conf/config.ini
+++ b/Conf/config.ini
@@ -13,8 +13,12 @@ sql_dbport = 3316
 sql_dbname = yishengyue_platform_db
 sql_user = ysy
 sql_pwd = aaaaa888
+
 yhz_host = https://tyhz.yishengyue.cn
 yhz_dbname = t_yhz_db
+
+tysyo2o_host = https://tysyo2o.yishengyue.cn
+tysyo2o_db = o2o
 
 [online_release]
 # release正式服务
