增加了一生約我的模快用例 修改了小豬從測試環境到正式環境

--- a/Conf/config.ini
+++ b/Conf/config.ini
@@ -36,6 +36,9 @@ release_sql_dbname = yishengyue_platform_db
 release_sql_user = ysy_check
 release_sql_pwd = rammstein5!
 
+ysyo2o_host = https://tysyo2o.yishengyue.cn
+ysyo2o_db = ysy_o2o
+
 [mail]
 #发送邮件信息
 smtpserver = smtp.163.com
