增加了报事报修的提交、报修列表、取消报修三个用例

--- a/Conf/config.ini
+++ b/Conf/config.ini
@@ -14,6 +14,7 @@ ysy_sql_dbname = yishengyue_platform_db
 ysy_sql_user = ysy
 ysy_sql_pwd = aaaaa888
 #雨花斋测试环境
+yhz_user = 18284504401
 yhz_host = https://tyhz.yishengyue.cn
 yhz_db_name = t_yhz_db
 yhz_db_user = xianchun
@@ -41,12 +42,13 @@ ysy_sql_dbname = yishengyue_platform_db
 ysy_sql_user = ysy_check
 ysy_sql_pwd = rammstein5!
 # 商城正式环境
-ysyo2o_host = https://tysyo2o.yishengyue.cn
+ysyo2o_host = https://ysyo2o.yishengyue.cn
 ysyo2o_db_name = ysy_o2o
 # 一生约物业环境
 ysy_pro_host = https://propertyapi.yishengyue.cn
 ysy_pro_user = 19981203720
-#雨花斋测试环境
+#雨花斋正式环境
+yhz_user = 18284504401
 yhz_host = https://yhz.yishengyue.cn
 yhz_db_name = yhz_db
 
